--- a/client/src/components/resrc/scss/NavBar.scss
+++ b/client/src/components/resrc/scss/NavBar.scss
@@ -3,6 +3,39 @@
     height: 80px;
     .nav {
         height: 100%;
-        
+        width: 100%;
+        background-color: #303030;
+        display: flex;
+        justify-content: center;
+        .container {
+            height: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            width: 90%;
+            max-width: 1600px;
+            background-color: whitesmoke;
+            margin: 0;
+            padding: 0;
+            .logo {
+                height: 100%;
+                display: flex;
+                align-items: center;
+                width: 12%;
+
+            }
+            .searchBar {
+                background-color: red;
+                width: 72%;
+                height: 100%;
+            }
+            .userGUI {
+                background-color: blue;
+                width: 12%;
+                height: 100%;
+            }
+        }
+
     }
 }
